--- a/week4_A108060110_許家寧.ipynb
+++ b/week4_A108060110_許家寧.ipynb
@@ -4,9 +4,7 @@
   "metadata": {
     "colab": {
       "name": "week4-A108060110-許家寧.ipynb",
-      "provenance": [],
-      "authorship_tag": "ABX9TyMfQb6WYvXwUPdYGnzrshxo",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -14,16 +12,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/hsuning444/Computational-Thinking-and-Program-Design/blob/master/week4_A108060110_%E8%A8%B1%E5%AE%B6%E5%AF%A7.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "metadata": {
@@ -47,6 +35,36 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DcnyCmca5PtD",
+        "colab_type": "text"
+      },
+      "source": [
+        "嗨～我是盧佳怡"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dqpOHrbY4PdC",
+        "colab_type": "text"
+      },
+      "source": [
+        "嗨嗨~我是A108060110許家寧\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vCxrCXR85Nwo",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
       ]
     }
   ]
